# CFSF_bot

./: README.md  logging_config.py  main.py  pyproject.toml
Bot/: bot.py
Bot/cogs/Utility/: __init__.py  bot_manage.py  translator.py
Bot/config/: general.toml
Bot/src/checker/: permission.py
Bot/src/util/: cog.py  config.py
config/: config.py  general.toml  translator.toml
