[project]
name = "cfsf-bot"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "davey>=0.1.6",
    "deep-translator>=1.11.4",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "logging>=0.4.9.6",
    "pathlib>=1.0.1",
    "psutil>=7.2.2",
    "pynacl>=1.6.2",
    "python-box[toml]>=7.4.1",
]
